Remove debug messages for launch

--- a/MineCave: RankSync/config.yml
+++ b/MineCave: RankSync/config.yml
@@ -8,11 +8,11 @@ ranks to sync:
 - coal
 - iron
 - gold
-- lapis
+- Lapis
 - diamond
 - emerald
 - elite
-- supreme
+- Supreme
 - helper
 - moderator
 - admin
